testcli/antlrgen/SQLParser.py
# Generated from D:/Work/testcli/testcli/antlr\SQLParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SQLParser ( Parser ):

    grammarFileName = "SQLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "<INVALID>", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "'\"'", "'''", "'\\'", "<INVALID>", "'CONNECT'", 
                     "'SESSION'", "'ASSERT'", "'EXIT'", "'QUIT'", "'USE'", 
                     "'API'", "'SQL'", "'DISCONNECT'", "'START'", "'LOADMAP'", 
                     "'WHENEVER_ERROR'", "'CONTINUE'", "'SPOOL'", "'END'", 
                     "'__INTERNAL__'", "'SET'", "'LOOP'", "'UNTIL'", "'INTERVAL'", 
                     "'SLEEP'", "'LOADDRIVER'", "<INVALID>", "'> {%'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'CREATE'", 
                     "'INSERT'", "'UPDATE'", "'SELECT'", "'DELETE'", "'REPLACE'", 
                     "'DECLARE'", "'BEGIN'", "'DROP'", "'COMMIT'", "'ROLLBACK'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'?'", "'#'", "'|'", "'//'", "'='", "'&'", "'JDBC'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'{%'", "'%}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'HINT'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'SAVE'", "'RELEASE'", "'RESTORE'", "'SAVEURL'", 
                     "'SHOW'" ]

    symbolicNames = [ "<INVALID>", "CRLF", "COMMA", "SEMICOLON", "COLON", 
                      "AT", "DOT", "SLASH", "BRACKET_OPEN", "BRACKET_CLOSE", 
                      "SQUARE_OPEN", "SQUARE_CLOSE", "DOUBLE_QUOTE", "SINGLE_QUOTE", 
                      "ESCAPE", "SPACE", "CONNECT", "SESSION", "ASSERT", 
                      "EXIT", "QUIT", "USE", "API", "SQL", "DISCONNECT", 
                      "START", "LOADMAP", "WHENEVER_ERROR", "CONTINUE", 
                      "SPOOL", "END", "INTERNAL", "SET", "LOOP", "UNTIL", 
                      "INTERVAL", "SLEEP", "LOADDRIVER", "ECHO_OPEN", "SCRIPT_OPEN", 
                      "COMMENT_OPEN", "MINUS_MINUS_HINT", "MINUS_MINUS_COMMENT", 
                      "HASH_COMMENT", "SQL_CREATE", "SQL_INSERT", "SQL_UPDATE", 
                      "SQL_SELECT", "SQL_DELETE", "SQL_REPLACE", "SQL_DECLARE", 
                      "SQL_BEGIN", "SQL_DROP", "SQL_COMMIT", "SQL_ROLLBACK", 
                      "SQL_CREATE_PROCEDURE", "INT", "DECIMAL", "String", 
                      "CONNECT_SPACE", "CONNECT_AT", "CONNECT_SLASH", "CONNECT_COLON", 
                      "CONNECT_QUESTION", "CONNECT_POUND", "CONNECT_OR", 
                      "CONNECT_DASH", "CONNECT_EQUAL", "CONNECT_PARA_AND", 
                      "JDBC", "IPV4", "CONNECT_PORT", "CONNECT_STRING", 
                      "ScriptBlock", "EchoBlock", "ASSERT_SPACE", "ASSERT_OPEN", 
                      "ASSERT_CLOSE", "ASSERT_EXPRESSION", "CommentString", 
                      "HINT_SP", "HINT", "HINT_CLOSE", "HINT_STRING", "SESSION_SPACE", 
                      "SESSION_SAVE", "SESSION_RELEASE", "SESSION_RESTORE", 
                      "SESSION_SAVEURL", "SESSION_SHOW", "SESSION_NAME", 
                      "SESSION_END", "SQL_CRLF", "SQL_SPACE", "SQL_END", 
                      "SQL_STRING", "SQL_SINGLE", "SQL_OTHER", "SQL_PROCEDURE_CRLF", 
                      "SQL_SLASH", "SQL_PROCEDURE_SLASH", "SQLProcedureStatement" ]

    RULE_prog = 0
    RULE_command = 1
    RULE_exit = 2
    RULE_quit = 3
    RULE_use = 4
    RULE_sleep = 5
    RULE_connect = 6
    RULE_connectlocal = 7
    RULE_connectjdbc = 8
    RULE_connectUserInfo = 9
    RULE_connectDriver = 10
    RULE_connectDriverSchema = 11
    RULE_connectDriverType = 12
    RULE_connectHost = 13
    RULE_connectUser = 14
    RULE_connectPassword = 15
    RULE_connectPort = 16
    RULE_connectService = 17
    RULE_connectlocalService = 18
    RULE_connectParameterName = 19
    RULE_connectParameterValue = 20
    RULE_connectParameter = 21
    RULE_connectParameters = 22
    RULE_disconnect = 23
    RULE_session = 24
    RULE_singleExpression = 25
    RULE_expression = 26
    RULE_start = 27
    RULE_loadmap = 28
    RULE_wheneverError = 29
    RULE_spool = 30
    RULE_echo = 31
    RULE_loadDriver = 32
    RULE_internal = 33
    RULE_set = 34
    RULE_script = 35
    RULE_loopUntil = 36
    RULE_loop = 37
    RULE_loopPair = 38
    RULE_assert = 39
    RULE_sql = 40
    RULE_sqlCreate = 41
    RULE_sqlReplace = 42
    RULE_sqlInsert = 43
    RULE_sqlUpdate = 44
    RULE_sqlDelete = 45
    RULE_sqlSelect = 46
    RULE_sqlDrop = 47
    RULE_sqlCommitRollback = 48
    RULE_sqlDeclare = 49
    RULE_sqlCreateProcedure = 50

    ruleNames =  [ "prog", "command", "exit", "quit", "use", "sleep", "connect", 
                   "connectlocal", "connectjdbc", "connectUserInfo", "connectDriver", 
                   "connectDriverSchema", "connectDriverType", "connectHost", 
                   "connectUser", "connectPassword", "connectPort", "connectService", 
                   "connectlocalService", "connectParameterName", "connectParameterValue", 
                   "connectParameter", "connectParameters", "disconnect", 
                   "session", "singleExpression", "expression", "start", 
                   "loadmap", "wheneverError", "spool", "echo", "loadDriver", 
                   "internal", "set", "script", "loopUntil", "loop", "loopPair", 
                   "assert", "sql", "sqlCreate", "sqlReplace", "sqlInsert", 
                   "sqlUpdate", "sqlDelete", "sqlSelect", "sqlDrop", "sqlCommitRollback", 
                   "sqlDeclare", "sqlCreateProcedure" ]

    EOF = Token.EOF
    CRLF=1
    COMMA=2
    SEMICOLON=3
    COLON=4
    AT=5
    DOT=6
    SLASH=7
    BRACKET_OPEN=8
    BRACKET_CLOSE=9
    SQUARE_OPEN=10
    SQUARE_CLOSE=11
    DOUBLE_QUOTE=12
    SINGLE_QUOTE=13
    ESCAPE=14
    SPACE=15
    CONNECT=16
    SESSION=17
    ASSERT=18
    EXIT=19
    QUIT=20
    USE=21
    API=22
    SQL=23
    DISCONNECT=24
    START=25
    LOADMAP=26
    WHENEVER_ERROR=27
    CONTINUE=28
    SPOOL=29
    END=30
    INTERNAL=31
    SET=32
    LOOP=33
    UNTIL=34
    INTERVAL=35
    SLEEP=36
    LOADDRIVER=37
    ECHO_OPEN=38
    SCRIPT_OPEN=39
    COMMENT_OPEN=40
    MINUS_MINUS_HINT=41
    MINUS_MINUS_COMMENT=42
    HASH_COMMENT=43
    SQL_CREATE=44
    SQL_INSERT=45
    SQL_UPDATE=46
    SQL_SELECT=47
    SQL_DELETE=48
    SQL_REPLACE=49
    SQL_DECLARE=50
    SQL_BEGIN=51
    SQL_DROP=52
    SQL_COMMIT=53
    SQL_ROLLBACK=54
    SQL_CREATE_PROCEDURE=55
    INT=56
    DECIMAL=57
    String=58
    CONNECT_SPACE=59
    CONNECT_AT=60
    CONNECT_SLASH=61
    CONNECT_COLON=62
    CONNECT_QUESTION=63
    CONNECT_POUND=64
    CONNECT_OR=65
    CONNECT_DASH=66
    CONNECT_EQUAL=67
    CONNECT_PARA_AND=68
    JDBC=69
    IPV4=70
    CONNECT_PORT=71
    CONNECT_STRING=72
    ScriptBlock=73
    EchoBlock=74
    ASSERT_SPACE=75
    ASSERT_OPEN=76
    ASSERT_CLOSE=77
    ASSERT_EXPRESSION=78
    CommentString=79
    HINT_SP=80
    HINT=81
    HINT_CLOSE=82
    HINT_STRING=83
    SESSION_SPACE=84
    SESSION_SAVE=85
    SESSION_RELEASE=86
    SESSION_RESTORE=87
    SESSION_SAVEURL=88
    SESSION_SHOW=89
    SESSION_NAME=90
    SESSION_END=91
    SQL_CRLF=92
    SQL_SPACE=93
    SQL_END=94
    SQL_STRING=95
    SQL_SINGLE=96
    SQL_OTHER=97
    SQL_PROCEDURE_CRLF=98
    SQL_SLASH=99
    SQL_PROCEDURE_SLASH=100
    SQLProcedureStatement=101

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(SQLParser.CommandContext,0)


        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SQLParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.command()
            self.state = 103
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exit(self):
            return self.getTypedRuleContext(SQLParser.ExitContext,0)


        def quit(self):
            return self.getTypedRuleContext(SQLParser.QuitContext,0)


        def use(self):
            return self.getTypedRuleContext(SQLParser.UseContext,0)


        def sleep(self):
            return self.getTypedRuleContext(SQLParser.SleepContext,0)


        def connect(self):
            return self.getTypedRuleContext(SQLParser.ConnectContext,0)


        def disconnect(self):
            return self.getTypedRuleContext(SQLParser.DisconnectContext,0)


        def session(self):
            return self.getTypedRuleContext(SQLParser.SessionContext,0)


        def start(self):
            return self.getTypedRuleContext(SQLParser.StartContext,0)


        def loadmap(self):
            return self.getTypedRuleContext(SQLParser.LoadmapContext,0)


        def wheneverError(self):
            return self.getTypedRuleContext(SQLParser.WheneverErrorContext,0)


        def spool(self):
            return self.getTypedRuleContext(SQLParser.SpoolContext,0)


        def loadDriver(self):
            return self.getTypedRuleContext(SQLParser.LoadDriverContext,0)


        def set_(self):
            return self.getTypedRuleContext(SQLParser.SetContext,0)


        def internal(self):
            return self.getTypedRuleContext(SQLParser.InternalContext,0)


        def script(self):
            return self.getTypedRuleContext(SQLParser.ScriptContext,0)


        def loop(self):
            return self.getTypedRuleContext(SQLParser.LoopContext,0)


        def echo(self):
            return self.getTypedRuleContext(SQLParser.EchoContext,0)


        def loopUntil(self):
            return self.getTypedRuleContext(SQLParser.LoopUntilContext,0)


        def assert_(self):
            return self.getTypedRuleContext(SQLParser.AssertContext,0)


        def sql(self):
            return self.getTypedRuleContext(SQLParser.SqlContext,0)


        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = SQLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.exit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.quit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.use()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.sleep()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.connect()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.disconnect()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 111
                self.session()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 112
                self.start()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 113
                self.loadmap()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 114
                self.wheneverError()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 115
                self.spool()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 116
                self.loadDriver()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 117
                self.set_()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 118
                self.internal()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 119
                self.script()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 120
                self.loop()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 121
                self.echo()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 122
                self.loopUntil()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 123
                self.assert_()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 124
                self.sql()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 125
                self.match(SQLParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXIT(self):
            return self.getToken(SQLParser.EXIT, 0)

        def INT(self):
            return self.getToken(SQLParser.INT, 0)

        def CRLF(self):
            return self.getToken(SQLParser.CRLF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_exit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExit" ):
                return visitor.visitExit(self)
            else:
                return visitor.visitChildren(self)




    def exit(self):

        localctx = SQLParser.ExitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(SQLParser.EXIT)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 129
                self.match(SQLParser.INT)


            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 132
                self.match(SQLParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUIT(self):
            return self.getToken(SQLParser.QUIT, 0)

        def INT(self):
            return self.getToken(SQLParser.INT, 0)

        def CRLF(self):
            return self.getToken(SQLParser.CRLF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_quit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuit" ):
                return visitor.visitQuit(self)
            else:
                return visitor.visitChildren(self)




    def quit(self):

        localctx = SQLParser.QuitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_quit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(SQLParser.QUIT)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 136
                self.match(SQLParser.INT)


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 139
                self.match(SQLParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(SQLParser.USE, 0)

        def API(self):
            return self.getToken(SQLParser.API, 0)

        def SQL(self):
            return self.getToken(SQLParser.SQL, 0)

        def CRLF(self):
            return self.getToken(SQLParser.CRLF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_use

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUse" ):
                return visitor.visitUse(self)
            else:
                return visitor.visitChildren(self)




    def use(self):

        localctx = SQLParser.UseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_use)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(SQLParser.USE)
            self.state = 143
            _la = self._input.LA(1)
            if not(_la==22 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 144
                self.match(SQLParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SleepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLEEP(self):
            return self.getToken(SQLParser.SLEEP, 0)

        def INT(self):
            return self.getToken(SQLParser.INT, 0)

        def CRLF(self):
            return self.getToken(SQLParser.CRLF, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_sleep

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSleep" ):
                return visitor.visitSleep(self)
            else:
                return visitor.visitChildren(self)




    def sleep(self):

        localctx = SQLParser.SleepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sleep)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(SQLParser.SLEEP)
            self.state = 148
            self.match(SQLParser.INT)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 149
                self.match(SQLParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connectjdbc(self):
            return self.getTypedRuleContext(SQLParser.ConnectjdbcContext,0)


        def connectlocal(self):
            return self.getTypedRuleContext(SQLParser.ConnectlocalContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_connect

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnect" ):
                return visitor.visitConnect(self)
            else:
                return visitor.visitChildren(self)




    def connect(self):

        localctx = SQLParser.ConnectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_connect)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 152
                self.connectjdbc()
                pass

            elif la_ == 2:
                self.state = 153
                self.connectlocal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectlocalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT(self):
            return self.getToken(SQLParser.CONNECT, 0)

        def CONNECT_SLASH(self):
            return self.getToken(SQLParser.CONNECT_SLASH, 0)

        def connectlocalService(self):
            return self.getTypedRuleContext(SQLParser.ConnectlocalServiceContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_connectlocal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnectlocal" ):
                return visitor.visitConnectlocal(self)
            else:
                return visitor.visitChildren(self)




    def connectlocal(self):

        localctx = SQLParser.ConnectlocalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_connectlocal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(SQLParser.CONNECT)
            self.state = 157
            self.match(SQLParser.CONNECT_SLASH)
            self.state = 158
            self.connectlocalService()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectjdbcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT(self):
            return self.getToken(SQLParser.CONNECT, 0)

        def connectUserInfo(self):
            return self.getTypedRuleContext(SQLParser.ConnectUserInfoContext,0)


        def connectDriver(self):
            return self.getTypedRuleContext(SQLParser.ConnectDriverContext,0)


        def CONNECT_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.CONNECT_COLON)
            else:
                return self.getToken(SQLParser.CONNECT_COLON, i)

        def connectDriverSchema(self):
            return self.getTypedRuleContext(SQLParser.ConnectDriverSchemaContext,0)


        def CONNECT_DASH(self):
            return self.getToken(SQLParser.CONNECT_DASH, 0)

        def connectHost(self):
            return self.getTypedRuleContext(SQLParser.ConnectHostContext,0)


        def connectService(self):
            return self.getTypedRuleContext(SQLParser.ConnectServiceContext,0)


        def CONNECT_QUESTION(self):
            return self.getToken(SQLParser.CONNECT_QUESTION, 0)

        def connectParameters(self):
            return self.getTypedRuleContext(SQLParser.ConnectParametersContext,0)


        def CONNECT_SLASH(self):
            return self.getToken(SQLParser.CONNECT_SLASH, 0)

        def CONNECT_AT(self):
            return self.getToken(SQLParser.CONNECT_AT, 0)

        def connectDriverType(self):
            return self.getTypedRuleContext(SQLParser.ConnectDriverTypeContext,0)


        def connectPort(self):
            return self.getTypedRuleContext(SQLParser.ConnectPortContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_connectjdbc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnectjdbc" ):
                return visitor.visitConnectjdbc(self)
            else:
                return visitor.visitChildren(self)




    def connectjdbc(self):

        localctx = SQLParser.ConnectjdbcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_connectjdbc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(SQLParser.CONNECT)

            self.state = 161
            self.connectUserInfo()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 162
                self.match(SQLParser.CONNECT_AT)


            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==69:
                self.state = 165
                self.connectDriver()
                self.state = 166
                self.match(SQLParser.CONNECT_COLON)
                self.state = 167
                self.connectDriverSchema()
                self.state = 168
                self.match(SQLParser.CONNECT_COLON)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==72:
                    self.state = 169
                    self.connectDriverType()
                    self.state = 170
                    self.match(SQLParser.CONNECT_COLON)


                self.state = 174
                self.match(SQLParser.CONNECT_DASH)
                self.state = 175
                self.connectHost()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==71:
                    self.state = 176
                    self.connectPort()


                self.state = 179
                _la = self._input.LA(1)
                if not(_la==61 or _la==62):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 180
                self.connectService()


            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==63:
                self.state = 184
                self.match(SQLParser.CONNECT_QUESTION)
                self.state = 185
                self.connectParameters()

